frontend/src/scss/layout/_header.scss
@use '../utils' as *;

.header {
  width: 100%;
  padding: 0 rem(50px);
  height: rem(150px);
  display: flex;
  align-items: center;
  box-sizing: border-box;
  &--logo {
    justify-items: start;
    margin-right: auto;
    cursor: pointer;
    font-size: rem(40px);
    img {
      height: rem(50px);
    }
  }
}

.search--form {
  display: flex;
  align-items: center;
  position: relative;
  border-bottom: 1px solid $black;
  border-width: rem(2px);
  box-sizing: border-box;
  #search {
    height: rem(35px);
    width: rem(250px);
    border: none;
    font-size: rem(20px);
    padding-left: rem(10px);
    padding-right: rem(40px);
    transition: all 0.5s;
    &:focus {
      outline: none;
    }
  }

  .search--hidden {
    width: 0 !important;
    padding: 0 !important;
    border-width: 0px;
    caret-color: transparent;
  }

  .fa-search {
    position: absolute;
    right: 0;
    top: 0;
    z-index: 10;
    margin-left: rem(10px);
    font-size: rem(25px);
    cursor: pointer;
    padding: rem(5px);
    padding-bottom: rem(3px);
    background-color: $white;
  }
}

.user {
  display: flex;
  align-items: center;
  margin-left: rem(30px);
  width: rem(45px);
  height: rem(45px);
  border-radius: 50%;
  background-image: url('../assets/defaultAvatar.png');
  background-repeat: no-repeat;
  background-size: cover;
  background-position: 50% 50%;
  cursor: pointer;
}

.nav-box {
  position: absolute;
  right: rem(20px);
  top: rem(130px);
  border-radius: rem(10px);
  background-color: aliceblue;

  ul {
    li {
      padding: rem(18px) rem(50px);
      cursor: pointer;
      text-align: center;
      font-size: rem(20px);

      &:first-child:hover {
        border-radius: rem(10px) rem(10px) 0 0;
        background-color: rgb(232, 237, 252);
      }

      &:hover {
        background-color: rgb(232, 237, 252);
      }

      &:last-child:hover {
        border-radius: 0 0 rem(10px) rem(10px);
        background-color: rgb(232, 237, 252);
      }
    }
  }
  &::after {
    content: '';
    position: absolute;
    top: rem(-15px);
    right: rem(40px);
    border-top: 0px solid transparent;
    border-left: 10px solid transparent;
    border-right: 10px solid transparent;
    border-bottom: 15px solid aliceblue;
  }
}

